--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             colors: {
               clifford: "#da373d",
               "theme-color": "#F85559",
+              "theme-color-secondary": "#121212",
             },
           },
         },
@@ -45,7 +46,7 @@
     </style>
   </head>
   <body class="font-montserrat">
-    <header class="md:container md:mx-auto">
+    <header class="container mx-auto px-10">
       <nav
         class="lg:bg-theme-color text-white lg:mt-5 px-3 py-3 md:py-7 rounded-full"
       >
@@ -79,10 +80,10 @@
             <ul
               class="menu menu-horizontal px-1 hidden lg:inline-flex text-base xl:text-lg font-medium"
             >
-              <li><a>Home</a></li>
-              <li><a>About Us</a></li>
-              <li><a>Shop</a></li>
-              <li><a>All Fruits</a></li>
+              <li><a class="lg:px-2 xl:px-4">Home</a></li>
+              <li><a class="lg:px-2 xl:px-4">About Us</a></li>
+              <li><a class="lg:px-2 xl:px-4">Shop</a></li>
+              <li><a class="lg:px-2 xl:px-4">All Fruits</a></li>
             </ul>
           </div>
           <div class="navbar-center md:flex">
@@ -105,6 +106,140 @@
           </div>
         </div>
       </nav>
+      <!-- carousel starts -->
+      <div class="mt-5">
+        <div class="carousel w-full text-center h-[300px] md:h-[600px]">
+          <div
+            id="slide1"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            style="background-image: url(/images/banner1.png)"
+          >
+            <div class="text-white">
+              <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
+                Exotic tastes at your <br />
+                doorstep
+              </h1>
+              <p class="text-sm md:text-xl mt-3 mb-7">
+                We supply highly quality organic products
+              </p>
+              <button class="btn border-theme-color bg-theme-color text-white">
+                Shop Now
+              </button>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide4"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❮</a
+              >
+              <a
+                href="#slide2"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+          <div
+            id="slide2"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            style="background-image: url(/images/banner2.png)"
+          >
+            <div class="text-white">
+              <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
+                Exotic tastes at your <br />
+                doorstep
+              </h1>
+              <p class="text-base md:text-xl mt-3 mb-7">
+                We supply highly quality organic products
+              </p>
+              <button class="btn border-theme-color bg-theme-color text-white">
+                Shop Now
+              </button>
+            </div>
+
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide1"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❮</a
+              >
+              <a
+                href="#slide3"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+          <div
+            id="slide3"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            style="background-image: url(/images/banner3.png)"
+          >
+            <div class="text-white">
+              <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
+                Exotic tastes at your <br />
+                doorstep
+              </h1>
+              <p class="text-base md:text-xl mt-3 mb-7">
+                We supply highly quality organic products
+              </p>
+              <button class="btn border-theme-color bg-theme-color text-white">
+                Shop Now
+              </button>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide2"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❮</a
+              >
+              <a
+                href="#slide4"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+          <div
+            id="slide4"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            style="background-image: url(/images/banner4.png)"
+          >
+            <div class="text-white">
+              <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
+                Exotic tastes at your <br />
+                doorstep
+              </h1>
+              <p class="text-base md:text-xl mt-3 mb-7">
+                We supply highly quality organic products
+              </p>
+              <button class="btn border-theme-color bg-theme-color text-white">
+                Shop Now
+              </button>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide3"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❮</a
+              >
+              <a
+                href="#slide1"
+                class="btn btn-circle border-theme-color-secondary bg-theme-color-secondary text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
