--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
   </head>
   <body class="font-montserrat">
-    <header class="container mx-auto px-10">
+    <header class="container mx-auto px-5 md:px-10">
       <nav
         class="lg:bg-theme-color text-white lg:mt-5 px-3 py-3 md:py-7 rounded-full"
       >
@@ -107,11 +107,11 @@
         </div>
       </nav>
       <!-- carousel starts -->
-      <div class="mt-5">
+      <div class="mt-2 md:mt-6">
         <div class="carousel w-full text-center h-[300px] md:h-[600px]">
           <div
             id="slide1"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
             style="background-image: url(/images/banner1.png)"
           >
             <div class="text-white">
@@ -119,7 +119,9 @@
                 Exotic tastes at your <br />
                 doorstep
               </h1>
-              <p class="text-sm md:text-xl mt-3 mb-7">
+              <p
+                class="text-sm md:text-xl max-w-[230px] mx-auto md:max-w-none md:mx-0 mt-5 mb-8"
+              >
                 We supply highly quality organic products
               </p>
               <button class="btn border-theme-color bg-theme-color text-white">
@@ -143,7 +145,7 @@
           </div>
           <div
             id="slide2"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
             style="background-image: url(/images/banner2.png)"
           >
             <div class="text-white">
@@ -151,7 +153,9 @@
                 Exotic tastes at your <br />
                 doorstep
               </h1>
-              <p class="text-base md:text-xl mt-3 mb-7">
+              <p
+                class="text-sm md:text-xl max-w-[230px] mx-auto md:max-w-none md:mx-0 mt-5 mb-8"
+              >
                 We supply highly quality organic products
               </p>
               <button class="btn border-theme-color bg-theme-color text-white">
@@ -176,7 +180,7 @@
           </div>
           <div
             id="slide3"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
             style="background-image: url(/images/banner3.png)"
           >
             <div class="text-white">
@@ -184,7 +188,9 @@
                 Exotic tastes at your <br />
                 doorstep
               </h1>
-              <p class="text-base md:text-xl mt-3 mb-7">
+              <p
+                class="text-sm md:text-xl max-w-[230px] mx-auto md:max-w-none md:mx-0 mt-5 mb-8"
+              >
                 We supply highly quality organic products
               </p>
               <button class="btn border-theme-color bg-theme-color text-white">
@@ -208,7 +214,7 @@
           </div>
           <div
             id="slide4"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center"
+            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
             style="background-image: url(/images/banner4.png)"
           >
             <div class="text-white">
@@ -216,7 +222,9 @@
                 Exotic tastes at your <br />
                 doorstep
               </h1>
-              <p class="text-base md:text-xl mt-3 mb-7">
+              <p
+                class="text-sm md:text-xl max-w-[230px] mx-auto md:max-w-none md:mx-0 mt-5 mb-8"
+              >
                 We supply highly quality organic products
               </p>
               <button class="btn border-theme-color bg-theme-color text-white">
