--- a/index.html
+++ b/index.html
@@ -254,20 +254,24 @@
     </header>
     <!-- main starts  -->
     <main class="container mx-auto px-5 md:px-10">
-      <section id="deal-of-the-day" class="mt-3 md:mt-10">
+      <section id="deal-of-the-day" class="mt-10">
         <!-- text-content and countdown starts  -->
-        <div class="flex justify-between">
-          <div>
+        <div
+          class="flex justify-between flex-col lg:flex-row text-center lg:text-left"
+        >
+          <!-- text content  -->
+          <div class="mb-6 lg:mb-0 lg:mr-7">
             <h1 class="text-5xl text-theme-color-secondary font-extrabold mb-5">
               Deal of the day
             </h1>
-            <p class="text-base text-text-color-secondary">
+            <p class="text-base text-text-color-secondary px-6 lg:px-0">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical <br />Latin literature from 45 BC,
               making it over 2000 years old.
             </p>
           </div>
-          <div>
+          <!-- countdown section  -->
+          <div class="flex justify-center">
             <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
               <div class="flex flex-col text-text-color-secondary">
                 <span
@@ -305,13 +309,13 @@
           </div>
         </div>
         <!-- cards and modal part starts  -->
-        <div>
+        <div class="mt-12 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-6">
           <!-- card 1 -->
-          <div class="card w-96 border border-border-color rounded-lg">
+          <div class="card border border-border-color rounded-lg">
             <figure class="px-10 pt-10 flex-col">
               <img src="/images/fruit6.png" alt="fruits" class="rounded-xl" />
               <h1
-                class="text-theme-color-secondary text-2xl font-bold mt-7 border-b-2 px-10 pb-6"
+                class="text-theme-color-secondary text-2xl font-bold mt-7 border-b-2 px-2 pb-6"
               >
                 12.90$ - 18.85$
               </h1>
@@ -322,6 +326,7 @@
               >
                 Apples
               </h2>
+              <!-- rating section  -->
               <div class="rating rating-lg rating-half my-5">
                 <input type="radio" name="rating-10" class="rating-hidden" />
                 <input
@@ -378,21 +383,96 @@
               </div>
               <div class="card-actions">
                 <!-- Open the modal using ID.showModal() method -->
-                <button class="btn" onclick="my_modal_1.showModal()">
-                  open modal
+                <button
+                  class="btn border-none text-theme-color capitalize bg-transparent"
+                  onclick="my_modal_1.showModal()"
+                >
+                  Details
                 </button>
                 <dialog
                   id="my_modal_1"
                   class="modal modal-bottom sm:modal-middle"
                 >
                   <form method="dialog" class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">
-                      Press ESC key or click the button below to close
+                    <img
+                      class="max-w-[100%] mx-auto"
+                      src="images/fruit8.png"
+                      alt=""
+                    />
+                    <h3 class="font-bold text-4xl">Red Dragon</h3>
+                    <p class="py-4 text-base">
+                      Professional employees are there for you to pick the most
+                      amazing and fresh fruits.
                     </p>
-                    <div class="modal-action">
+                    <!-- modal rating    -->
+                    <div class="rating rating-lg rating-half my-2">
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="rating-hidden"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-1"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-1"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-1"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-10"
+                        class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
+                      />
+                    </div>
+                    <div class="modal-action justify-center">
                       <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
+                      <button
+                        class="btn bg-transparent border-theme-color text-theme-color"
+                      >
+                        Close
+                      </button>
+                      <button class="btn bg-theme-color text-white">
+                        Buy Now
+                      </button>
                     </div>
                   </form>
                 </dialog>
@@ -400,98 +480,6 @@
             </div>
           </div>
           <!-- card 2 -->
-          <div class="card w-96 shadow-xl">
-            <figure class="px-10 pt-10 flex-col">
-              <img src="/images/fruit6.png" alt="fruits" class="rounded-xl" />
-              <h1
-                class="text-theme-color-secondary text-2xl font-bold mt-7 border-b-2 px-10 pb-6"
-              >
-                12.90$ - 18.85$
-              </h1>
-            </figure>
-            <div class="card-body items-center text-center">
-              <h2
-                class="card-title text-text-color-secondary text-base font-medium"
-              >
-                Apples
-              </h2>
-              <div class="rating rating-lg rating-half my-5">
-                <input type="radio" name="rating-10" class="rating-hidden" />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-1"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-1"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-1"
-                />
-                <input
-                  type="radio"
-                  name="rating-10"
-                  class="bg-[#FBC0A8] mask mask-star-2 mask-half-2"
-                />
-              </div>
-              <div class="card-actions">
-                <!-- Open the modal using ID.showModal() method -->
-                <button class="btn" onclick="my_modal_2.showModal()">
-                  open modal
-                </button>
-                <dialog
-                  id="my_modal_2"
-                  class="modal modal-bottom sm:modal-middle"
-                >
-                  <form method="dialog" class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">
-                      Press ESC key or click the button below to close
-                    </p>
-                    <div class="modal-action">
-                      <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
-                    </div>
-                  </form>
-                </dialog>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
     </main>
