images problem solved

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div
             id="slide1"
             class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
-            style="background-image: url(/images/banner1.png)"
+            style="background-image: url(images/banner1.png)"
           >
             <div class="text-white">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
@@ -149,7 +149,7 @@
           <div
             id="slide2"
             class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
-            style="background-image: url(/images/banner2.png)"
+            style="background-image: url(images/banner2.png)"
           >
             <div class="text-white">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
@@ -184,7 +184,7 @@
           <div
             id="slide3"
             class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
-            style="background-image: url(/images/banner3.png)"
+            style="background-image: url(images/banner3.png)"
           >
             <div class="text-white">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
@@ -218,7 +218,7 @@
           <div
             id="slide4"
             class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
-            style="background-image: url(/images/banner4.png)"
+            style="background-image: url(images/banner4.png)"
           >
             <div class="text-white">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
@@ -313,7 +313,7 @@
           <!-- card 1 -->
           <div class="card border border-border-color rounded-lg">
             <figure class="px-10 pt-10 flex-col">
-              <img src="/images/fruit6.png" alt="fruits" class="rounded-xl" />
+              <img src="images/fruit6.png" alt="fruits" class="rounded-xl" />
               <h1
                 class="text-theme-color-secondary text-2xl font-bold mt-7 border-b-2 px-2 pb-6"
               >
