meet the team section done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               "theme-color": "#F85559",
               "theme-color-secondary": "#121212",
               "border-color": "rgba(18, 18, 18, 0.10)",
+              "meet-the-team-color": "rgba(18, 18, 18, 0.40)",
               "text-color-secondary": "rgba(18, 18, 18, 0.60)",
             },
           },
@@ -127,7 +128,9 @@
               >
                 We supply highly quality organic products
               </p>
-              <button class="btn border-theme-color bg-theme-color text-white">
+              <button
+                class="btn border-theme-color bg-theme-color text-white capitalize"
+              >
                 Shop Now
               </button>
             </div>
@@ -254,6 +257,7 @@
     </header>
     <!-- main starts  -->
     <main class="container mx-auto px-5 md:px-10">
+      <!-- deal of tha day starts  -->
       <section id="deal-of-the-day" class="mt-10">
         <!-- text-content and countdown starts  -->
         <div
@@ -819,7 +823,7 @@
               </div>
             </div>
           </div>
-          <!-- card 3 -->
+          <!-- card 4 -->
           <div class="card border border-border-color rounded-lg">
             <figure class="px-10 pt-10 flex-col">
               <img src="images/fruit9.png" alt="fruits" class="rounded-xl" />
@@ -986,6 +990,123 @@
                   </form>
                 </dialog>
               </div>
+            </div>
+          </div>
+        </div>
+        <!-- shop all button  -->
+        <div class="flex justify-center my-12">
+          <button
+            class="btn border-theme-color bg-theme-color text-white capitalize"
+          >
+            Shop All
+          </button>
+        </div>
+      </section>
+      <!-- meet the team starts  -->
+      <section
+        id="meet-the-team"
+        class="mt-10 text-center text-white flex justify-center items-center rounded-lg bg-cover bg-center bg-meet-the-team-color bg-blend-overlay"
+        style="background-image: url(images/team.png)"
+      >
+        <div>
+          <!-- header section  -->
+          <div class="pt-16 md:pt-20 px-4 md:px-0">
+            <h1 class="text-3xl md:text-5xl font-extrabold mb-5">
+              Meet the team section
+            </h1>
+            <p class="text-base px-6 lg:px-0">
+              Contrary to popular belief, is not simply random text. It has
+              roots in a piece of classical <br />
+              Latin literature from 45 BC, making it over 2000 years old
+            </p>
+          </div>
+          <!-- team members section  -->
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pb-20 gap-7"
+          >
+            <!-- member 1  -->
+            <div class="mt-12">
+              <img
+                class="max-w-[100%] mx-auto"
+                src="images/member1.png"
+                alt=""
+              />
+              <h3 class="mt-8 text-2xl">Awlad Hossain</h3>
+              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <p>
+                <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="#" class="p-2 mx-1 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="p-2 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </p>
+            </div>
+            <!-- member 2  -->
+            <div class="mt-12">
+              <img
+                class="max-w-[100%] mx-auto"
+                src="images/member2.png"
+                alt=""
+              />
+              <h3 class="mt-8 text-2xl">Safia Chowdhury</h3>
+              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <p>
+                <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="#" class="p-2 mx-1 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="p-2 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </p>
+            </div>
+            <!-- member 3  -->
+            <div class="mt-12">
+              <img
+                class="max-w-[100%] mx-auto"
+                src="images/member3.png"
+                alt=""
+              />
+              <h3 class="mt-8 text-2xl">Rokib Hossain</h3>
+              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <p>
+                <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="#" class="p-2 mx-1 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="p-2 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </p>
+            </div>
+            <!-- member 4  -->
+            <div class="mt-12">
+              <img
+                class="max-w-[100%] mx-auto"
+                src="images/member4.png"
+                alt=""
+              />
+              <h3 class="mt-8 text-2xl">Chaity</h3>
+              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <p>
+                <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a href="#" class="p-2 mx-1 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="p-2 bg-theme-color rounded-full"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </p>
             </div>
           </div>
         </div>
