--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,8 @@
                 src="images/member1.png"
                 alt=""
               />
-              <h3 class="mt-8 text-2xl">Awlad Hossain</h3>
-              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <h3 class="mt-8 text-2xl font-bold">Awlad Hossain</h3>
+              <p class="mt-2 mb-5 text-base font-medium">Fruits Expert</p>
               <p>
                 <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
                   ><i class="fa-brands fa-facebook-f"></i
@@ -1052,8 +1052,8 @@
                 src="images/member2.png"
                 alt=""
               />
-              <h3 class="mt-8 text-2xl">Safia Chowdhury</h3>
-              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <h3 class="mt-8 text-2xl font-bold">Safia Chowdhury</h3>
+              <p class="mt-2 mb-5 text-base font-medium">Fruits Expert</p>
               <p>
                 <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
                   ><i class="fa-brands fa-facebook-f"></i
@@ -1073,8 +1073,8 @@
                 src="images/member3.png"
                 alt=""
               />
-              <h3 class="mt-8 text-2xl">Rokib Hossain</h3>
-              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <h3 class="mt-8 text-2xl font-bold">Rokib Hossain</h3>
+              <p class="mt-2 mb-5 text-base font-medium">Fruits Expert</p>
               <p>
                 <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
                   ><i class="fa-brands fa-facebook-f"></i
@@ -1094,8 +1094,8 @@
                 src="images/member4.png"
                 alt=""
               />
-              <h3 class="mt-8 text-2xl">Chaity</h3>
-              <p class="mt-2 mb-5 text-base">Fruits Expert</p>
+              <h3 class="mt-8 text-2xl font-bold">Chaity</h3>
+              <p class="mt-2 mb-5 text-base font-medium">Fruits Expert</p>
               <p>
                 <a href="#" class="py-2 px-3 bg-theme-color rounded-full"
                   ><i class="fa-brands fa-facebook-f"></i
@@ -1112,5 +1112,35 @@
         </div>
       </section>
     </main>
+    <!-- footer starts  -->
+    <footer
+      class="footer footer-center mt-16 py-20 bg-theme-color-secondary text-white"
+    >
+      <!-- logo  -->
+      <div class="flex items-center gap-3">
+        <img src="images/logo.png" alt="logo" />
+        <h1 class="text-3xl md:text-[40px] font-bold">Fruit Burst</h1>
+      </div>
+      <!-- footer nav  -->
+      <div
+        class="my-3 sm:my-5 grid grid-flow-row grid-cols-4 sm:grid-flow-col gap-5 sm:gap-10 text-base sm:text-lg font-semibold"
+      >
+        <a href="#">Home</a>
+        <a href="#">About us</a>
+        <a href="#">Shop</a>
+        <a href="#">All Fruits</a>
+        <a href="#" class="col-span-2 mt-2 sm:mt-0 sm:col-span-1">Support</a>
+        <a href="#" class="col-span-2 mt-2 sm:mt-0 sm:col-span-1">My Account</a>
+      </div>
+      <!-- social media icons  -->
+      <div class="grid grid-flow-col gap-8 text-4xl">
+        <a><i class="fa-brands fa-twitter"></i></a>
+        <a><i class="fa-brands fa-facebook"></i></a>
+        <a><i class="fa-brands fa-youtube"></i></a>
+        <a><i class="fa-brands fa-linkedin-in"></i></a>
+        <a><i class="fa-brands fa-instagram"></i></a>
+        <a><i class="fa-brands fa-apple"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
