--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
               </h1>
             </div>
           </div>
-          <div class="navbar-end hidden lg:inline-flex">
+          <div
+            class="navbar-end hidden lg:inline-flex text-text-color-secondary"
+          >
             <div class="join rounded-full">
               <input class="input join-item" placeholder="Search here" />
               <button class="btn join-item rounded-r-full bg-white">
@@ -125,7 +127,7 @@
         <div class="carousel w-full text-center h-[300px] md:h-[600px]">
           <div
             id="slide1"
-            class="carousel-item relative w-full flex justify-center items-center lg:items-start rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
+            class="carousel-item relative w-full flex justify-center items-center lg:items-start rounded-lg bg-cover bg-center bg-meet-the-team-color bg-blend-overlay"
             style="background-image: url(images/banner1.png)"
           >
             <div class="text-white lg:pt-24">
@@ -161,10 +163,10 @@
           </div>
           <div
             id="slide2"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
+            class="carousel-item relative w-full flex justify-center items-center lg:items-start rounded-lg bg-cover bg-center bg-meet-the-team-color bg-blend-overlay"
             style="background-image: url(images/banner2.png)"
           >
-            <div class="text-white">
+            <div class="text-white lg:pt-24">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
                 Exotic tastes at your <br />
                 doorstep
@@ -196,10 +198,10 @@
           </div>
           <div
             id="slide3"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
+            class="carousel-item relative w-full flex justify-center items-center lg:items-start rounded-lg bg-cover bg-center bg-meet-the-team-color bg-blend-overlay"
             style="background-image: url(images/banner3.png)"
           >
-            <div class="text-white">
+            <div class="text-white lg:pt-24">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
                 Exotic tastes at your <br />
                 doorstep
@@ -230,10 +232,10 @@
           </div>
           <div
             id="slide4"
-            class="carousel-item relative w-full flex justify-center items-center rounded-lg bg-cover bg-center bg-[rgba(12,12,12,0.3)] bg-blend-overlay"
+            class="carousel-item relative w-full flex justify-center items-center lg:items-start rounded-lg bg-cover bg-center bg-meet-the-team-color bg-blend-overlay"
             style="background-image: url(images/banner4.png)"
           >
-            <div class="text-white">
+            <div class="text-white lg:pt-24">
               <h1 class="text-2xl md:text-7xl font-extrabold leading-tight">
                 Exotic tastes at your <br />
                 doorstep
