final editing done

--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
     </main>
     <!-- footer starts  -->
     <footer
-      class="footer footer-center mt-16 py-20 bg-theme-color-secondary text-white"
+      class="footer footer-center mt-16 lg:mt-32 py-20 bg-theme-color-secondary text-white"
     >
       <!-- logo  -->
       <div class="flex items-center gap-3">
